# synapse

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
benches/: arithmetic_bench.rs
python/synapse/: __init__.py  _core.py  _synapse.pyi  typing.py
src/: bindings.rs  error.rs  lib.rs  ndarray.rs
src/ops/: arch.rs  arithmetic.rs  broadcast.rs  dot.rs  mod.rs  reduction.rs  shapes.rs  slice.rs  transform.rs
