[package]
name = "synapse"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.25.1", optional = true }
rayon = { version = "1.11.0"}

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "arithmetic_bench"
harness = false

[lib]
name = "synapse"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module"]
