[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "synapse"
version = "0.1.0"
description = "A fast n-dimensional array library for Python implemented in Rust"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yourusername/synapse"
Repository = "https://github.com/yourusername/synapse"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "synapse._synapse"